Next version
  A simple SQL builder where tables and fields from the "select fields from tables"
  part can be selected from a list
  
Working on:
  Query result in data grid
  SQL builder
  File picker with icons on directories and files
  Layout

Version 0.6
  Simple execution of SQL and display of result (for the time being as comma
  separated lines in list)
  
Version 0.50
  Display view data
  Display create script for tables and views
  Enhanced file picker (sorted list - directories before files and icons)
  Two way scrolling data grid
  Can be moved to SDCard
  
Later:
  See triggers
  Query database

Version 0.11

New in this version:
  Can now display table data

Version 0.1

Now able to:
  Browse SDCard and open a database
  See tables, views and index
  See table structure