@@ -18,6 +18,7 @@
 		<activity android:name=".DBViewer"></activity>
         <activity android:name=".TableViewer"></activity>
         <activity android:name=".DataGrid"></activity>
+        <activity android:name=".Help"></activity>
 	</application>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 </manifest> 
