@@ -1,0 +1,13 @@
+package dk.andsen.asqlitemanager;
+
+import android.app.Activity;
+import android.os.Bundle;
+
+public class Help extends Activity {
+
+	@Override
+	public void onCreate(Bundle savedInstanceState) {
+		super.onCreate(savedInstanceState);
+		setContentView(R.layout.help);
+	}
+}
